# flaskbb-plugin-portal

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  babel.cfg  pyproject.toml  setup.py
portal/: __init__.py  views.py
portal/templates/: index.html
portal/translations/: messages.pot
portal/translations/de/LC_MESSAGES/: messages.po
portal/translations/en/LC_MESSAGES/: messages.po
portal/translations/zh_CN/LC_MESSAGES/: messages.po
