[project]
name = "flaskbb-plugin-portal"
version = "2.0.0"
dependencies = [
    "FlaskBB>=2.1.0",
]
requires-python = ">=3.12"
authors = [
  {name = "Peter Justin", email = "peter.justin@outlook.com"},
]
maintainers = [
  {name = "Peter Justin", email = "peter.justin@outlook.com"}
]
description = "A portal plugin for FlaskBB."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E"]
keywords = ["flaskbb", "plugin", "portal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
[project.urls]
Homepage = "https://github.com/flaskbb/flaskbb-plugin-portal"
Repository = "https://github.com/flaskbb/flaskbb-plugin-portal"
Issues = "https://github.com/flaskbb/flaskbb-plugin-portal/issues"
Changelog = "https://github.com/flaskbb/flaskbb-plugin-portal/blob/master/CHANGELOG.md"

[project.entry-points.'flaskbb_plugins']
portal = 'portal'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch",
    "Babel",
    "alabaster",
    "cov-core",
    "coverage",
    "freezegun",
    "ipython",
    "pre-commit",
    "py",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.sdist]
only-include = ["portal"]

[tool.hatch.build.targets.wheel]
packages = ["portal"]

[tool.uv]
package = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.basedpyright]
include = ["portal"]
exclude = ["**/node_modules", "**/resources", "**/__pycache__"]
defineConstant = { DEBUG = true }
reportGeneralTypeIssues = "none"
reportIgnoreCommentWithoutRule = false
reportMissingImports = "error"
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportUnannotatedClassAttribute = false
reportUnusedParameter = false
reportAny = false
reportExplicitAny = false

[tool.ruff.lint]
ignore = ["E711", "E712"]
